fixes button positioning on tablet and desktop

--- a/src/app/components/mirror/mirror.scss
+++ b/src/app/components/mirror/mirror.scss
@@ -28,3 +28,8 @@
   cursor: pointer;
   margin: 15px auto;
 }
+
+.full {
+  display: flex;
+  flex: 0 0 100%;
+}
